--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
                 <div class="icon-container">
                     <img src="assets/cute-face.png" alt="Cute Icon" class="cute-icon">
                 </div>
-                <h1 id="valentine-question"></h1>
+                <h1 id="valentine-question">Nishaaa will you be my valentine??? 🥺</h1>
                 <div class="button-group">
                     <button id="yes-btn" class="btn yes-btn">💗 Yes</button>
-                    <button id="no-btn" class="btn no-btn">⚪ No</button>
+                    <!-- No button moved out to allow easier positioning relative to card -->
                 </div>
+                <button id="no-btn" class="btn no-btn">⚪ No</button>
                 <p class="shy-text">No seems a bit shy 😈</p>
             </div>
         </div>
