--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container" id="question-card">
             <div class="card">
                 <div class="icon-container">
-                    <img src="assets/cute-face.png" alt="Cute Icon" class="cute-icon">
+                    <img src="/cute-face.png" alt="Cute Icon" class="cute-icon">
                 </div>
                 <h1 id="valentine-question">Nishaaa will you be my valentine??? 🥺</h1>
                 <div class="button-group">
