--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will You Be My Valentine?</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="container" id="question-card">
             <div class="card">
                 <div class="icon-container">
-                    <img src="/cute-face.png" alt="Cute Icon" class="cute-icon">
+                    <img src="cute-face.png" alt="Cute Icon" class="cute-icon">
                 </div>
                 <h1 id="valentine-question">Nishaaa will you be my valentine??? 🥺</h1>
                 <div class="button-group">
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
