fix: convert script to module and move assets to public/ for Vite compatibility on Vercel

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container" id="question-card">
             <div class="card">
                 <div class="icon-container">
-                    <img src="cute-face.png" alt="Cute Icon" class="cute-icon">
+                    <img src="/cute-face.png" alt="Cute Icon" class="cute-icon">
                 </div>
                 <h1 id="valentine-question">Nishaaa will you be my valentine??? 🥺</h1>
                 <div class="button-group">
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
